Fix bvideo not occupying the right amount of space on mobile

--- a/ui/src/screens/app.watch.home/style.css
+++ b/ui/src/screens/app.watch.home/style.css
@@ -39,7 +39,7 @@
   }
 }
 
-@media (min-width: 640px) {
+@media (min-width: 992px) {
   .watch-screen-video.is-chat-open {
     width: calc(100% - var(--player-chat-pane-width-desktop));
   }
